--- a/main.css
+++ b/main.css
@@ -35,11 +35,14 @@ h1 {
 #small-logo {
   width: 50px;
   height: 25px;
-  margin-right: 105px;
+}
+
+.see-link {
+  display: none;
+  color: #d3d3d3;
 }
 
 .menu {
-  position: fixed;
   display: block;
   float: left;
   border: none;
@@ -137,6 +140,17 @@ h1 {
   color: rgb(39, 42, 49);
 }
 
+.about-p {
+  border: 2px solid #d3d3d3;
+  width: 65vw;
+  align-content: center;
+  margin: 0 0 0 16%;
+  padding: 25px;
+  font-weight: 600;
+  color: rgb(39, 42, 49);
+  text-align: center;
+}
+
 .home-p2 {
   width: 80vw;
   align-content: center;
@@ -153,6 +167,7 @@ h1 {
   padding: 25px;
   font-weight: 400;
   color: rgb(39, 42, 49);
+  text-align: center;
 }
 
 span {
@@ -160,16 +175,25 @@ span {
   font-weight: 700;
 }
 
+h2 {
+  margin: 0 0 0 10%;
+  padding-top: 15%;
+  color: #ec5242;
+  font-size: 0.8em;
+  font-weight: 900;
+}
+
 .about-text {
-  text-shadow: none;
+  margin: 0 0 0 10%;
+  padding-top: 15%;
+  color: #ec5242;
+  font-size: 3em;
+  font-weight: 900;
+  text-align: center;
 }
 
 .home-text h3 {
   font-size: 3em;
-}
-
-.about-text h3 {
-  font-size: 2em;
 }
 
 .home2 {
@@ -279,7 +303,7 @@ footer {
   flex-direction: row;
   width: 100vw;
   height: 200px;
-  background-color: rgb(39, 42, 49);
+  background-color: #d3d3d3;
   gap: 20px;
   padding-top: 30px;
 }
@@ -305,9 +329,9 @@ footer {
 }
 
 .foot1-div {
-  color: #d3d3d3;
+  color: rgb(39, 42, 49);
   padding-top: 30px;
-  font-size: 1.2em;
+  font-size: 0.9em;
 }
 
 .spon-h {
@@ -438,19 +462,61 @@ hr {
 .about2-logo {
   width: 80%;
   margin-bottom: 20px;
-  padding-left: 25%;
+  height: 150px;
+  margin-left: 0;
   border: 2px solid #d3d3d3;
+  padding: 10px 20px 10px 30px;
+}
+
+.about2-p {
+  width: 80%;
+  margin-bottom: 20px;
   padding-top: 10px;
   padding-bottom: 10px;
+  text-align: center;
 }
 
 .about-line {
-  width: 10%;
+  width: 50px;
   height: 5px;
 }
 
 .about2-logo-img {
-  width: 60%;
+  width: 100%;
+  height: 60%;
+  margin-top: 30px;
+}
+
+.about2-img1 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  width: 80%;
+  padding-bottom: 30px;
+}
+
+.overlay1 {
+  background-color: rgba(236, 82, 66, 0.5);
+  width: 100%;
+  height: 250px;
+  z-index: 5;
+  color: #fff;
+  text-align: center;
+  padding-top: 75px;
+}
+
+.img1 {
+  background-image: url("assets/images/concert1.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.img2 {
+  background-image: url("assets/images/concert2.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 @media screen and (min-width: 768px) {
@@ -481,13 +547,10 @@ hr {
     color: #ec5242;
     padding: 0 5px;
   }
-  .logo-small {
-    width: 50px;
-    height: 25px;
-  }
   #small-logo {
     width: 50px;
     height: 25px;
+    margin-right: 500px;
   }
   .nav-links :hover {
     color: #fff;
@@ -564,6 +627,48 @@ hr {
   .join-btn {
     display: none;
   }
+  .about2-div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-top: 20px;
+    font-size: 16px;
+  }
+  #about-head {
+    margin-left: 0;
+  }
+  .about-text {
+    margin: 0;
+    padding-top: 0;
+    color: #ec5242;
+    font-size: 3em;
+    font-weight: 900;
+    text-align: center;
+  }
+  .about2-txt {
+    width: 80%;
+    font-weight: 600;
+    font-size: 1.4em;
+    text-align: center;
+    padding-top: 20px;
+  }
+  .about2-txt2 {
+    font-weight: 900;
+    font-size: 0.8em;
+  }
+  .about2-logo {
+    width: 30%;
+  }
+  .about2-img1 {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    width: 80%;
+    padding-bottom: 30px;
+  }
   .sponsor {
     display: flex;
     flex-direction: row;
@@ -584,7 +689,7 @@ hr {
     padding-top: 100px;
   }
   .foot1 {
-    background-color: rgb(39, 42, 49);
+    background-color: #d3d3d3;
     width: 100vw;
     height: 200px;
     text-align: center;
@@ -594,7 +699,8 @@ hr {
     color: rgb(39, 42, 49);
   }
   .foot1-p {
-    color: #d3d3d3;
+    color: rgb(39, 42, 49);
+    font-size: 0.8em;
   }
   .btr {
     width: 75px;
@@ -613,5 +719,9 @@ hr {
     color: #d3d3d3;
     padding-top: 30px;
     font-size: 1.2em;
+  }
+  .see-link {
+    display: block;
+    color: #d3d3d3;
   }
 }/*# sourceMappingURL=main.css.map */
