--- a/main.scss
+++ b/main.scss
@@ -1,3 +1,4 @@
+
 @import url('https://fonts.googleapis.com/css2?family=Alumni+Sans+Pinstripe&family=Crete+Round:ital@0;1&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Flex:opsz,wght@8..144,100;8..144,200;8..144,300;8..144,400;8..144,600;8..144,700;8..144,800;8..144,900;8..144,1000&display=swap');
 
 $orange: #ec5242;
@@ -49,7 +50,7 @@ h1 {
 }
 
 .menu {
-  // position: fixed;
+  position: fixed;
   display: block;
   float: left;
   border: none;
@@ -461,24 +462,23 @@ hr {
 }
 
 .about2-txt {
-  width: 80%; 
+  width: 80%;
   font-size: 2em;
   text-align: center;
 }
 
 .about2-logo {
- width: 80%;
- margin-bottom: 20px; 
- height: 150px;
- margin-left: 0;
-//  padding-left: 15%;
- border: 2px solid $grey;
- padding: 10px 20px 10px 30px;
+  width: 80%;
+  margin-bottom: 20px;
+  height: 150px;
+  margin-left: 0;
+  border: 2px solid $grey;
+  padding: 10px 20px 10px 30px;
 }
 
 .about2-p {
   width: 80%;
-  margin-bottom: 20px; 
+  margin-bottom: 20px;
   padding-top: 10px;
   padding-bottom: 10px;
   text-align: center;
@@ -486,7 +486,7 @@ hr {
 
 .about-line {
   width: 50px;
-  height: 5px;;
+  height: 5px;
 }
 
 .about2-logo-img {
@@ -516,9 +516,9 @@ hr {
 }
 
 .img1 {
-background-image: url('assets/images/concert1.jpg');
-background-repeat: no-repeat;
-background-size: cover;
+  background-image: url('assets/images/concert1.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .img2 {
@@ -681,8 +681,8 @@ background-size: cover;
   }
 
   .about2-txt {
-    width: 80%; 
-    font-weight: 600 ;
+    width: 80%;
+    font-weight: 600;
     font-size: 1.4em;
     text-align: center;
     padding-top: 20px;
@@ -694,7 +694,7 @@ background-size: cover;
   }
 
   .about2-logo {
-  width: 30%;
+    width: 30%;
   }
 
   .about2-img1 {
