--- a/main.css
+++ b/main.css
@@ -1,4 +1,6 @@
+
 @import url("https://fonts.googleapis.com/css2?family=Alumni+Sans+Pinstripe&family=Crete+Round:ital@0;1&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Flex:opsz,wght@8..144,100;8..144,200;8..144,300;8..144,400;8..144,600;8..144,700;8..144,800;8..144,900;8..144,1000&display=swap");
+
 * {
   box-sizing: border-box;
   font-family: "Lato", sans-serif;
@@ -57,7 +59,7 @@ h1 {
   display: none;
   background-color: rgba(39, 42, 49, 0.2);
   -webkit-backdrop-filter: blur(10px);
-          backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
   z-index: 11;
   width: 100%;
   height: 100vh;
@@ -524,9 +526,11 @@ hr {
   .nav_container {
     background-color: rgb(39, 42, 49);
   }
+
   .menu {
     display: none;
   }
+  
   .nav_container > ul {
     display: flex;
     flex-direction: row;
@@ -535,42 +539,52 @@ hr {
     gap: 40px;
     margin-bottom: 0;
   }
+
   .nav-link1 {
     color: #fff;
     text-decoration: none;
   }
+
   .nav-link2 {
     color: rgb(39, 42, 49);
     text-decoration: none;
   }
+
   .logo {
     border: 2px solid #ec5242;
     color: #ec5242;
     padding: 0 5px;
   }
+
   #small-logo {
     width: 50px;
     height: 25px;
     margin-right: 500px;
   }
+
   .nav-links :hover {
     color: #fff;
   }
+
   .nav1 {
     background-color: rgb(39, 42, 49);
   }
+
   .nav2 {
     margin-top: 24px;
     background-color: #fff;
   }
+
   .nav2-item {
     color: rgb(39, 42, 49);
   }
+
   .nav-icons {
     z-index: 9;
     width: 20px;
     height: 20px;
   }
+
   .home-top {
     margin-top: 50px;
     width: 100vw;
@@ -578,11 +592,13 @@ hr {
     background-repeat: no-repeat;
     background-size: cover;
   }
+
   .overlay {
     margin-top: 50px;
     height: auto;
     padding-bottom: 100px;
   }
+
   .home-p {
     border: 2px solid #d3d3d3;
     width: 50vw;
@@ -591,9 +607,11 @@ hr {
     padding: 25px;
     font-weight: 600;
   }
+
   .home2 {
     height: auto;
   }
+
   .card-box {
     display: flex;
     flex-direction: row;
@@ -601,6 +619,7 @@ hr {
     align-content: center;
     padding: 0 10vw;
   }
+
   .box {
     display: flex;
     flex-direction: column;
@@ -612,22 +631,27 @@ hr {
     padding: 10px;
     gap: 10px;
   }
+
   .artists {
     display: grid;
     grid-template-columns: 50% 50%;
     grid-gap: 10px;
   }
+
   .all-cards {
     display: flex;
   }
+
   .no-display {
     display: block;
     font-size: 0.8em;
     text-decoration: underline;
   }
+
   .join-btn {
     display: none;
   }
+
   .about2-div {
     display: flex;
     flex-direction: column;
@@ -636,9 +660,11 @@ hr {
     padding-top: 20px;
     font-size: 16px;
   }
+
   #about-head {
     margin-left: 0;
   }
+
   .about-text {
     margin: 0;
     padding-top: 0;
@@ -647,6 +673,7 @@ hr {
     font-weight: 900;
     text-align: center;
   }
+
   .about2-txt {
     width: 80%;
     font-weight: 600;
@@ -654,13 +681,16 @@ hr {
     text-align: center;
     padding-top: 20px;
   }
+
   .about2-txt2 {
     font-weight: 900;
     font-size: 0.8em;
   }
+
   .about2-logo {
     width: 30%;
   }
+
   .about2-img1 {
     display: flex;
     flex-direction: row;
@@ -670,6 +700,7 @@ hr {
     width: 80%;
     padding-bottom: 30px;
   }
+
   .sponsor {
     display: flex;
     flex-direction: row;
@@ -681,6 +712,7 @@ hr {
     padding-top: 20px;
     padding-bottom: 20px;
   }
+
   footer {
     background-color: #f7f3f3;
     width: 100vw;
@@ -689,6 +721,7 @@ hr {
     text-align: center;
     padding-top: 100px;
   }
+
   .foot1 {
     background-color: #d3d3d3;
     width: 100vw;
@@ -696,33 +729,42 @@ hr {
     text-align: center;
     padding-top: 100px;
   }
+
   .foot-p {
     color: rgb(39, 42, 49);
   }
+
   .foot1-p {
     color: rgb(39, 42, 49);
     font-size: 0.8em;
   }
+
   .btr {
     width: 75px;
     height: 50px;
   }
+
   .btr-div {
     display: flex;
     padding-left: 25%;
   }
+
   .foot-div {
     color: rgb(39, 42, 49);
     padding-top: 30px;
     font-size: 1.2em;
   }
+
   .foot1-div {
     color: #d3d3d3;
     padding-top: 30px;
     font-size: 1.2em;
   }
+
   .see-link {
     display: block;
     color: #d3d3d3;
   }
-}/*# sourceMappingURL=main.css.map */
+}
+
+/*# sourceMappingURL=main.css.map */
