--- a/main.css
+++ b/main.css
@@ -343,22 +343,23 @@ footer {
 }
 
 .spon-p-div {
-  display: flex;
-  flex-direction: column;
+  /* display: flex; */
+  /* flex-direction: column; */
   text-align: center;
 }
 
 .sponsor {
   display: flex;
   flex-direction: column;
-  gap: 5%;
+  /* gap: 5%; */
 }
 
 hr {
   color: #ec5242;
-  width: 30px;
-  height: 5px;
-  margin: 0 0 20px 0;
+  width: 100%;
+  height: 0.7em;
+  /* margin: 0 0 20px 0; */
+  text-align: center;
 }
 
 .partners {
