--- a/main.css
+++ b/main.css
@@ -379,10 +379,15 @@ hr {
 }
 
 .sponsor1 > img {
-  width: 60px;
-  height: 60px;
+  width: 7em;
+  height: 7em;
   margin: 20px;
 }
+
+/* .img-fluid {
+  width: 100%;
+  height: 100%;
+} */
 
 #sp1 {
   min-width: 120px;
